feat: create unknown modules related to project and user
