# internal/data/models.go
@@ -12,27 +12,29 @@ var (
 )
 
 type Models struct {
-	Users       UserModel
-	Tokens      TokenModel
-	Roles       RoleModel
-	Projects    ProjectModel
-	Units       UnitModel
-	Options     OptionModel
-	Invitations InvitationModel
-	Modules     ModuleModel
-	Benchmark   BenchmarkModel
+	Users          UserModel
+	Tokens         TokenModel
+	Roles          RoleModel
+	Projects       ProjectModel
+	Units          UnitModel
+	Options        OptionModel
+	Invitations    InvitationModel
+	Modules        ModuleModel
+	Benchmark      BenchmarkModel
+	UnknownModules UnknownModuleModel
 }
 
 func NewModels(db *sql.DB) Models {
 	return Models{
-		Users:       UserModel{DB: db},
-		Tokens:      TokenModel{DB: db},
-		Roles:       RoleModel{DB: db},
-		Projects:    ProjectModel{DB: db},
-		Units:       UnitModel{DB: db},
-		Options:     OptionModel{DB: db},
-		Invitations: InvitationModel{DB: db},
-		Modules:     ModuleModel{DB: db},
-		Benchmark:   BenchmarkModel{DB: db},
+		Users:          UserModel{DB: db},
+		Tokens:         TokenModel{DB: db},
+		Roles:          RoleModel{DB: db},
+		Projects:       ProjectModel{DB: db},
+		Units:          UnitModel{DB: db},
+		Options:        OptionModel{DB: db},
+		Invitations:    InvitationModel{DB: db},
+		Modules:        ModuleModel{DB: db},
+		Benchmark:      BenchmarkModel{DB: db},
+		UnknownModules: UnknownModuleModel{DB: db},
 	}
 }
